--- a/index.html
+++ b/index.html
@@ -935,9 +935,9 @@
 	</footer>
 	
 
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js">
 	</script> 
-	<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js">
 	</script>
 	<script type="text/javascript" src="js/slick/slick.min.js"></script>
 	
